// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Screens/LoginLogup Default 1`] = `
<div
  className="sc-gtssRu eziWDA full-container"
>
  <div
    className="sc-fujyUd fYQaan"
  >
    <form
      className="sc-hKFyIo kDBVhA"
      onSubmit={[Function]}
    >
      <div
        className="radio-group"
      >
        <label
          className="label"
          htmlFor="login"
        >
          <input
            checked={true}
            className="radio-button"
            id="login"
            name="login"
            onChange={[Function]}
            type="radio"
            value="LOGIN"
          />
          Login
          <div
            className="bottom-bar"
          />
        </label>
        <label
          className="label"
          htmlFor="logup"
        >
          <input
            checked={false}
            className="radio-button"
            id="logup"
            name="logup"
            onChange={[Function]}
            type="radio"
            value="LOGUP"
          />
          Logup
          <div
            className="bottom-bar"
          />
        </label>
      </div>
      <svg
        className="sc-gKAblj kvfrDa"
        role="presentation"
        style={Object {}}
        viewBox="0 0 24 24"
      >
        <path
          d="M22,12V20A2,2 0 0,1 20,22H4A2,2 0 0,1 2,20V12A1,1 0 0,1 1,11V8A2,2 0 0,1 3,6H6.17C6.06,5.69 6,5.35 6,5A3,3 0 0,1 9,2C10,2 10.88,2.5 11.43,3.24V3.23L12,4L12.57,3.23V3.24C13.12,2.5 14,2 15,2A3,3 0 0,1 18,5C18,5.35 17.94,5.69 17.83,6H21A2,2 0 0,1 23,8V11A1,1 0 0,1 22,12M4,20H11V12H4V20M20,20V12H13V20H20M9,4A1,1 0 0,0 8,5A1,1 0 0,0 9,6A1,1 0 0,0 10,5A1,1 0 0,0 9,4M15,4A1,1 0 0,0 14,5A1,1 0 0,0 15,6A1,1 0 0,0 16,5A1,1 0 0,0 15,4M3,8V10H11V8H3M13,8V10H21V8H13Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
      <input
        className="sc-jSFkmK cBgNPW"
        id="email"
        name="email"
        onChange={[Function]}
        placeholder="e-mail"
        type="text"
        value=""
      />
      <input
        className="sc-jSFkmK cBgNPW"
        id="password"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
      <button
        className="sc-bdnylx gIfZYk"
      >
        Ingresar
      </button>
    </form>
  </div>
</div>
`;

exports[`Storyshots Screens/LoginLogup Logup State 1`] = `
<div
  className="sc-gtssRu eziWDA full-container"
>
  <div
    className="sc-fujyUd fYQaan"
  >
    <form
      className="sc-hKFyIo kDBVhA"
      onSubmit={[Function]}
    >
      <div
        className="radio-group"
      >
        <label
          className="label"
          htmlFor="login"
        >
          <input
            checked={false}
            className="radio-button"
            id="login"
            name="login"
            onChange={[Function]}
            type="radio"
            value="LOGIN"
          />
          Login
          <div
            className="bottom-bar"
          />
        </label>
        <label
          className="label"
          htmlFor="logup"
        >
          <input
            checked={true}
            className="radio-button"
            id="logup"
            name="logup"
            onChange={[Function]}
            type="radio"
            value="LOGUP"
          />
          Logup
          <div
            className="bottom-bar"
          />
        </label>
      </div>
      <svg
        className="sc-gKAblj kvfrDa"
        role="presentation"
        style={Object {}}
        viewBox="0 0 24 24"
      >
        <path
          d="M22,12V20A2,2 0 0,1 20,22H4A2,2 0 0,1 2,20V12A1,1 0 0,1 1,11V8A2,2 0 0,1 3,6H6.17C6.06,5.69 6,5.35 6,5A3,3 0 0,1 9,2C10,2 10.88,2.5 11.43,3.24V3.23L12,4L12.57,3.23V3.24C13.12,2.5 14,2 15,2A3,3 0 0,1 18,5C18,5.35 17.94,5.69 17.83,6H21A2,2 0 0,1 23,8V11A1,1 0 0,1 22,12M4,20H11V12H4V20M20,20V12H13V20H20M9,4A1,1 0 0,0 8,5A1,1 0 0,0 9,6A1,1 0 0,0 10,5A1,1 0 0,0 9,4M15,4A1,1 0 0,0 14,5A1,1 0 0,0 15,6A1,1 0 0,0 16,5A1,1 0 0,0 15,4M3,8V10H11V8H3M13,8V10H21V8H13Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
      <input
        className="sc-jSFkmK cBgNPW"
        id="email"
        name="email"
        onChange={[Function]}
        placeholder="e-mail"
        type="text"
        value=""
      />
      <input
        className="sc-jSFkmK cBgNPW"
        id="password"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
      <input
        className="sc-jSFkmK cBgNPW"
        id="confirm-password"
        name="confirm-password"
        onChange={[Function]}
        placeholder="Confirm password"
        type="password"
        value=""
      />
      <button
        className="sc-bdnylx gIfZYk"
      >
        Registrame
      </button>
    </form>
  </div>
</div>
`;

exports[`Storyshots Screens/LoginLogup With Error 1`] = `
<div
  className="sc-gtssRu eziWDA full-container"
>
  <div
    className="sc-fujyUd fYQaan"
  >
    <form
      className="sc-hKFyIo kDBVhA"
      onSubmit={[Function]}
    >
      <div
        className="radio-group"
      >
        <label
          className="label"
          htmlFor="login"
        >
          <input
            checked={true}
            className="radio-button"
            id="login"
            name="login"
            onChange={[Function]}
            type="radio"
            value="LOGIN"
          />
          Login
          <div
            className="bottom-bar"
          />
        </label>
        <label
          className="label"
          htmlFor="logup"
        >
          <input
            checked={false}
            className="radio-button"
            id="logup"
            name="logup"
            onChange={[Function]}
            type="radio"
            value="LOGUP"
          />
          Logup
          <div
            className="bottom-bar"
          />
        </label>
      </div>
      <svg
        className="sc-gKAblj kvfrDa"
        role="presentation"
        style={Object {}}
        viewBox="0 0 24 24"
      >
        <path
          d="M22,12V20A2,2 0 0,1 20,22H4A2,2 0 0,1 2,20V12A1,1 0 0,1 1,11V8A2,2 0 0,1 3,6H6.17C6.06,5.69 6,5.35 6,5A3,3 0 0,1 9,2C10,2 10.88,2.5 11.43,3.24V3.23L12,4L12.57,3.23V3.24C13.12,2.5 14,2 15,2A3,3 0 0,1 18,5C18,5.35 17.94,5.69 17.83,6H21A2,2 0 0,1 23,8V11A1,1 0 0,1 22,12M4,20H11V12H4V20M20,20V12H13V20H20M9,4A1,1 0 0,0 8,5A1,1 0 0,0 9,6A1,1 0 0,0 10,5A1,1 0 0,0 9,4M15,4A1,1 0 0,0 14,5A1,1 0 0,0 15,6A1,1 0 0,0 16,5A1,1 0 0,0 15,4M3,8V10H11V8H3M13,8V10H21V8H13Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
      <input
        className="sc-jSFkmK cBgNPW"
        id="email"
        name="email"
        onChange={[Function]}
        placeholder="e-mail"
        type="text"
        value=""
      />
      <input
        className="sc-jSFkmK cBgNPW"
        id="password"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
      <button
        className="sc-bdnylx gIfZYk"
      >
        Ingresar
      </button>
    </form>
    <hr
      className="sc-iCoHVE iTxUqW"
    />
    <section
      className="sc-dlnjPT huQcYD"
    >
      <p
        className="sc-eCApGN Vycwq"
      >
        this is an short error message
      </p>
    </section>
  </div>
</div>
`;
